--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-If you have any usage question, please email "yanghoch at usc dot edu".
+If you have any usage questions, please email "yanghoch at usc dot edu".
 
 == CONTENTS ==  
 === [http://code.google.com/p/perm/wiki/Compile Compile] ===
@@ -11,7 +11,7 @@ If you have any usage question, please email "yanghoch at usc dot edu".
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
 
-For single end read: {{{PerM <Ref> <Reads> [options]}}}
+For single-end reads: {{{PerM <Ref> <Reads> [options]}}}
 
 For [http://code.google.com/p/perm/wiki/single_end_example example]:
  * {{{./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping -u ummappedReads.fa}}} 
@@ -19,14 +19,14 @@ For [http://code.google.com/p/perm/wiki/single_end_example example]:
  * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}} 
  * {{{./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam -k 10 -a ambgious10.csfasta}}} 
 
-For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
+For paired-end reads: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
 
 For [http://code.google.com/p/perm/wiki/paired_end_example example]:
  * {{{./PerM ref.fa -1 F3.fa -2 R3.fa -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
  * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
 
-To build index only: {{{ PerM <Ref> <Read Length> --readFormat {.csfasta | .fasta} -m -s <index path> --seed F3}}}
+To build an index only: {{{ PerM <Ref> <Read Length> --readFormat {.csfasta | .fasta} -m -s <index path> --seed F3}}}
 
 For example:
  * {{{./PerM hg18.txt 50 --readFormat .csfasta -m -s hg18_50_SOLiD.index}}}
@@ -74,7 +74,7 @@ PerM deals with mate-paired reads by mapping each end separately. All combinatio
 || *-L * / *--lowerBound * ||_Int_|| mate-paired separate lower bound ||
 || *-U * / *--upperBound * ||_Int_|| mate-paired separate upper bound ||
 
-The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
+The upper bound and lower bound can be negative, which may catch the re-arrangement variations. Use the {{{ -A }}} argument to avoid missing the correct pairs. However, this may greatly increase the running time if both ends are in repetitive regions. 
 
 [http://code.google.com/p/perm/wiki/paired_end_example Examples]
 
@@ -87,9 +87,9 @@ The following is the default setting when the corresponding arg are not specifie
   * Won't save the index in file, unless {{{-s }}} is specified. 
   * For paired end, the default is set as lower bound 0 bp and upper bound 3000 bp.
  
-== Paralleled Mapping ==
-PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPU (cores) are available and assign each of them a read set. If a read set is done, the next read set in the list will be processed automatically. Each read set will have its own mapping output file. To better utilize all CPUs on a node, large reads are suggested to be split to many small read sets and put in the list. 
-When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU hours and may cause insufficiency of disk quota. 
+== Parallel Mapping ==
+PerM simultaneously maps multiple reads sets in a list by querying the same index. It will detect how many CPUs (cores) are available and assign each of them a read set. If a read set is done, the next read set in the list will be processed automatically. Each read set will have its own mapping output file. To better utilize all CPUs on a node, large reads set should be split into many small read sets and put in a list. 
+When multiple nodes are used in the same file system, the index should be pre-built first by one node; the other node will read the pre-built index with out building index again. Without pre-built index, each machine will try to build their own index, wasting CPU time and may cause insufficiency of disk quota. 
 
 
 == Use PerM on Galaxy == 
