--- a/wiki/SamExample.wiki
+++ b/wiki/SamExample.wiki
@@ -1,6 +1,5 @@
 #labels samTools
-You can use samtools to to pileup and get consensus sequence. 
-To get the expression level of RNA-seq from sam file, I wrote a simple bash shell wrapper [http://perm.googlecode.com/files/pileUp.sh wrapper] to combine multiple steps into one command. After you get the wig file with signal for each base-pair, you can further condense it to bed with my python scripts [http://perm.googlecode.com/files/Wig2Bed.py wig2Bed.py]. The output can be be showed on the genome browsers as the example [http://dw408k-1.cmb.usc.edu:8080/GeneList.htm web pages] on my computer, after proper headers line are added. 
+You can use [http://samtools.sourceforge.net/ samtools] to obtain a consensus sequence or to tally up (i.e. pileup) the number of reads falling in each sequence interval where the intervals may represent say genes or RNAs. To get the expression level of RNA-seq from SAM file, I wrote a simple bash shell wrapper [http://perm.googlecode.com/files/pileUp.sh wrapper] to combine multiple steps into one command. After you get the wig file with signal for each base-pair, you can further condense it to bed with my python scripts [http://perm.googlecode.com/files/Wig2Bed.py wig2Bed.py]. The output can be be displayed in a genome browser as shown in the example [http://dw408k-1.cmb.usc.edu:8080/GeneList.htm web pages] on my computer, after proper headers line are added. 
 
 To detect the junctions, you can first 
 
