--- a/wiki/QA.wiki
+++ b/wiki/QA.wiki
@@ -72,7 +72,7 @@ PerM barks by listing the error messages to warn you. Internally, PerM still map
 
 === Q8: Should I save the index first and then do the mapping? ===
 
-It's up to you. By default, PerM won't save the index. I can build hg18 index with 16 CPU for PerM in half hour. You may think it is small trade off compared to storing a 14GB index file. Be careful if you change the reference, delete or rebuild the index to avoid confusion.
+It's up to you. By default, PerM won't save the index. I can build hg18 index with 16 CPUs for PerM in half hour. You may think it is small trade off compared to storing a 14GB index file. Be careful if you change the reference, delete or rebuild the index to avoid confusion.
 
 === Q9: If my input reads have different read lengths, can they be mapped it together? ===
 
