--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -5,7 +5,7 @@ If you have any usage questions, please email "yanghoch at usc dot edu".
 === [http://code.google.com/p/perm/wiki/Compile Compile] ===
 === [http://code.google.com/p/perm/wiki/Input Input Files]===
 === [http://code.google.com/p/perm/wiki/Output Output Files]===
-=== [http://code.google.com/p/perm/wiki/Limitation Limitation and Future work] ===
+=== [http://code.google.com/p/perm/wiki/Limitation Limitations and Future work] ===
 === [http://code.google.com/p/perm/wiki/Algorithms Algorithms ] ===
 === [http://code.google.com/p/perm/wiki/QA Q & A ] ===
 == SYNOPSIS ==  
@@ -33,42 +33,43 @@ For example:
 
 == Command Line Options ==  
 ==== Required Arguments ====
- # The reference file should be in fasta format with the corresponding ext name ex: .fasta, .fna. or .fa. For transcriptom with multiple genes or isoforms as reference, concatenate all fasta in a fasta file. Or, if there are many files, one for each chromosome, ex: chr1.fa to chrY.fa, list them in a .txt file, so PerM knows it is a file listing the path of multiple fasta file.  
- # The reads file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to it's ext file name, or the format specified by flag *{{{--readFormat <format>}}}*. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by OpenMP. 
- # Mismatch threshold could be a integer 2 or more. For reads over 64 bp, PerM allows double the number of mismatches than the given threshold.
+ # The reference file should be in FASTA format with the either the *.fasta*, *.fna*, or *.fa* file extension. For a transcriptome with multiple genes or isoforms as reference, concatenate all FASTA sequences in a single FASTA file. Alternatively, if there are many files, for example one per chromosome, ex: chr1.fa to chrY.fa, list the FASTA filenames one per line in a file which has the *.txt* extension. The *.txt* is important because PerM examines the file extension to know the input file is a list of filenames. The filenames need to include the file path (relative or absolute) unless the FASTA files are all in the same directory that PerM is run from.
+ # The read file should be in the .fasta, .fastq, .csfasta or .csfastq format. PerM parses a file according to its extension, or the format explicitly specified by the *{{{--readFormat <format>}}}* flag. If there are multiple read files, list each file names in a .txt file, with each row a path of the reads file. PerM takes it as the input and can map multiple read sets in parallel by [http://en.wikipedia.org/wiki/OpenMP OpenMP].
+ # The maximum number of mismatches reported ({{{-v}}} flag) can be set to 2 or more. For reads over 64 bp, PerM allows double the number of mismatches specified because reads longer than 64 bp are treated as two separate reads of half the length which must map to adjacent positions in the same direction on the reference, i.e. as a restricted case of the more general pair-end mapping.
+
 ==== Options ====
 || *-A* || || Output all alignments within the mismatch threshold, end-to-end.||
 || *-B* || || Output best alignments in terms of mismatches in the threshold. ||
 || *-E* || || Output only the uniquely mapped reads. ||
 || *-A -E* || || Output only the uniquely mapped reads. Any read with two alignments within the mismatch threshold will be ambiguous. ||
-|| *-m* || || Create the reference index, without reusing the saved index. ||
+|| *-m* || || Create the reference index without reusing the saved index even if available. ||
 || *-s* ||_Path_|| Save the reference index to accelerate the mapping in the future. If path _P_ is not specify, the default path will be used. ||  
-|| *-v* ||_Int_|| where Int i the number of mismatches allowed in one end. ||
-|| *-t* ||_Int_|| Ignore the first Int base from the 5' end. Ex: if the first 5 bases is a barcode, put -t 5||
-|| *-T* ||_Int_|| Kept the first Int bases after bases ignored by -t option. Ignore the rest bases in 3' end. Ex: -T 30 means use only first 30 bases (signals) after the ignore base for -t option. ||
-|| *-k* ||_Int_|| Reads mapped to more than -k number position will not be printed in the mapping result. Users can collect the reads with the -a option.||
+|| *-v* || # || Maximum number of mismatches allowed (or allowed in one end for pair-end reads). ||
+|| *-t* || # || Number of bases at the 5' end of each read to ignore. For example, if the first 5 bases are used as a barcode or to index multiple samples together, use -t 5. If not specified, no initial bases will be ignored. ||
+|| *-T* || # || Number of bases in each read to use, starting after any bases ignored by -t option. Later bases at the 3' of the read are ignored. For example, -T 30 means use only first 30 bases (signals) after the any bases ignored due to the -t option. ||
+|| *-k* || # || Specifies maximum number of alignments to output. The default value is 200 if the -k flag is not given. Alignments for reads mapping to more than the maximum number positions will not be output. Use the -a option to collect reads which exceeded the maximum.||
 
-|| *-o* ||_Path_|| where Path is for output the mapping of one read set. PerM's output are in .mapping or .sam format, determined by the ext name of P. Ex: -o out.sam will output in SAM format; -o out.mapping will output in .mapping format.||
+|| *-o* ||_Path_|| where Path is for output the mapping of one read set. PerM's output will be either the .mapping tab delimited text format or the SAM format as determined by the extension of the output filename. For example {{{-o out.sam}}} will output in SAM format; {{{-o out.mapping}}} will output in .mapping format.||
 || *-d* ||_Path_|| where Path is the dir for multiple read sets. ||
-|| *-a* ||_Path_|| Print the fasta(fastq) file of those ambiguous reads mapped to more than a threshold specified by -k. ||
-|| *-u* ||_Path_|| Print the fasta(fastq) file of those unmapped reads to a file. ||
+|| *-a* ||_Path_|| Create a fasta(fastq) file for reads mapped to more positions than the threshold specified by -k or the default of 200. ||
+|| *-u* ||_Path_|| Create a fasta(fastq) file of unmapped reads. ||
 
 ====Long Options====
-|| *--noSamHeader*|| ||Print no Sam header so it is convenient to concatenate multiple sam output files ||
-|| *--includeReadsWN*|| || Include the reads with N or '.' by encoding N or '.' as A or 3 ||
-|| *--statsOnly* || || Output the mapping statistics in stdout only, without saving alignments to files||
+|| *--noSamHeader*|| || Do not include a SAM header. This makes it easier to concatenate multiple SAM output files. ||
+|| *--includeReadsWN*|| || Map reads with N or '.' bases by encoding N or '.' as A or 3. Normally such reads are ignored. ||
+|| *--statsOnly* || || Output the mapping statistics to stdout only, without saving alignments to files. ||
 || *--ignoreQS* || || Ignore the quality scores in fastq or QUAL files. ||
-|| *--printNM* || || When quality are avaiable, use this flag to print number of mismatches, instead of mismatch scores in mapping format. ||
+|| *--printNM* || || When quality are available, use this flag to print number of mismatches, instead of mismatch scores in mapping format. ||
 || *--seed* ||_{F,,0,, | F,,1,, | F,,2,, | F,,3,, | F,,4,,   |     S,,11,, | S,,12,,}_|| Specify the seed pattern, which has a specific full sensitive to 0 to 4 mismatches or one SNP + one or two color mismatches. Check [http://code.google.com/p/perm/wiki/Algorithms the algorithm page] for seed patterns to balance the sensitivity and running time.||
-|| *--refFormat* || _{fasta | list | index }_|| Take refs file in the specified format, instead of guessing according to its ext name. ||
-|| *--readFormat*||_{fasta | fastq | csfasta | csfastq}_||Read in reads in the specified format, instead of guessing according to the ext name. ||
-|| *--outputFormat*||_{ sam | mapping }_|| Overwrite the default output mapping format option. ||
+|| *--refFormat* || _{fasta | list | index }_|| Assume references sequence(s) are in the specified format, instead of guessing according to file's extension. ||
+|| *--readFormat*||_{fasta | fastq | csfasta | csfastq}_|| Assume reads are in the specified format, instead of guessing according to the file(s)' extension. ||
+|| *--outputFormat*||_{ sam | mapping }_|| Override the default output mapping format option or specify it explicitly when the output file extension is not .sam or .mapping. ||
 || *--delimiter*||_char_|| _char_ is a character used as the delimiter to separate the the read id, and the additional info in the line with '>' in fasta or csfasta. ||
 
 [http://code.google.com/p/perm/wiki/single_end_example Examples]
 
 ==== Options for Paired-end Reads ==== 
-PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
+PerM deals with mate-paired reads by mapping each end separately. All combinations of mated pairs mapping to the same reference sequence will be output if their separation are in the allowed ranged as specified by the *-L* and *-U* flags. 
 
 || *-e *|| || Exclude ambiguous paired. ||
 || *-L * / *--lowerBound * ||_Int_|| mate-paired separate lower bound ||
