--- a/wiki/single_end_example.wiki
+++ b/wiki/single_end_example.wiki
@@ -1,24 +1,24 @@
-====./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping ====
- * PerM maps reads in {{{reads.fa}}} to the reference sequences in {{{Ref.fasta}}}
- * PerM allows five mismatches, however the default [http://code.google.com/p/perm/wiki/Algorithms seed] chosen according to the read length, is only full sensitive to two or three mismatches. 
- * PerM first checks if the index had been saved in the default path. If yes, use it; if no, build it. It won't save the index in disk. 
+====./PerM ref.fasta reads.fasta -v 5 -o out.mapping ====
+ * PerM maps reads in {{{reads.fasta}}} to the reference sequence(s) in {{{ref.fasta}}}
+ * PerM will output alignments with up to five mismatches {{{-v 5}}}; however the default [http://code.google.com/p/perm/wiki/Algorithms seed] chosen according to the read length, is only fully sensitive to two or three mismatches. 
+ * PerM will first check if the index has previously been saved in the default path. If so, it will use it; otherwise it will build it. It won't save the index in disk. 
  * PerM outputs to the file {{{out.mapping}}} in the [http://code.google.com/p/perm/wiki/Output mapping] format. 
 
-====./PerM hg18.txt Reads.txt -v 5 -E -u Missed.fa ====
- * The {{{hg18.txt}}} should be file listing each reference fasta file in a line.
- * The {{{Reads.txt}}} should be the file listing each reads set in a line. [http://code.google.com/p/perm/wiki/Input more]. 
- * If your computer support [http://openmp.org/wp/ OpenMP.], PerM assigns one CPU per read set in the list, and mapped them in parallel. 
- * With flag {{{-E}}}, PerM will exclude the ambiguous mapping and output only the unique mapping, in term of number of mismatches. 
- * It allows five mismatches and output the unmapped reads to file {{{Missed.fa}}}
+====./PerM hg18.txt reads.txt -v 5 -E -u missed.fa ====
+ * {{{hg18.txt}}} should be a file listing each reference FASTA filename, one per line.
+ * {{{reads.txt}}} should be a file listing each file of reads, one per line. [http://code.google.com/p/perm/wiki/Input more details]. 
+ * If your computer supports [http://openmp.org/wp/ OpenMP], PerM assigns one CPU per file of reads in the list and maps them in parallel, sharing a single in memory index among all process threads.
+ * With the {{{-E}}} flag, PerM will exclude the ambiguous mapping and output only the unique mapping, in term of number of mismatches. 
+ * PerM will allows five mismatches {{{-v 5}}} and output the unmapped reads to file {{{missed.fa}}}
 
-====./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F4 ====
- * PerM guesses the read format as _SOLiD_ read format, according to the file's ext name. 
- * One can also use flag [http://code.google.com/p/perm/wiki/Manual --readFormat] to specify the format too. 
- * With {{{-m -s my.index}}}, PerM builds and saves index the the file {{{my.index}}}. 
+====./PerM ref.fasta reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F4 ====
+ * PerM guesses the read format as _SOLiD_ read format, according to the file's extension. 
+ * One can also use the [http://code.google.com/p/perm/wiki/Manual --readFormat] option to specify the format. 
+ * With {{{-m -s my.index}}}, PerM builds and saves the index file {{{my.index}}}. 
  * It uses comma as the delimiter to extract the read Id in the "header line" in the csfasta file. 
- * With {{{--seed F4}}}, PerM use the seed which is full sensitive to four mismatches to build index, which could be significantly slower than {{{F3 or S,,11,,}}} seed. 
+ * With {{{--seed F4}}}, PerM use the seed which is fully sensitive to four mismatches to build the index. Using the F4 seed could be significantly slower than the F3 or S,,1,1,, seed. 
 
 ====./PerM my.index reads.csfasta -v 5 -o out.sam ====
- * PerM reads in the saved index {{{my.index}}} and do the mapping. 
- * It output in [http://samtools.sourceforge.net/ SAM] format, according to the ext name. 
+ * PerM reads in the saved index {{{my.index}}} and does the mapping. 
+ * The output will be in [http://samtools.sourceforge.net/ SAM] format, as determined by the file extension (.sam) of the output file. 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
